// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect :props :clearable 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :defaultValue 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list">
                <div data-value="guangdong" data-level="0" class="t-tree__item t-tree__item--visible" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-caret-right-small"><path fill="currentColor" d="M6 5v6l4.5-3L6 5z" fill-opacity="0.9"></path></svg></span><label class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"><input type="checkbox" name="guangdong" class="t-checkbox__former" value=""><span class="t-checkbox__input"></span><span class="t-checkbox__label">广东省</span></label></div>
                <div data-value="jiangsu" data-level="0" class="t-tree__item t-tree__item--visible" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-caret-right-small"><path fill="currentColor" d="M6 5v6l4.5-3L6 5z" fill-opacity="0.9"></path></svg></span><label class="t-checkbox t-tree__label t-tree__label--strictly"><input type="checkbox" name="jiangsu" class="t-checkbox__former" value=""><span class="t-checkbox__input"></span><span class="t-checkbox__label">江苏省</span></label></div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m t-select-selected"><span class="t-select-placeholder" style="display: none;"></span><span class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close">shenzhen<svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close t-tag__icon-close"><path fill="currentColor" d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z" fill-opacity="0.9"></path></svg></span><span class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close">guangzhou<svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close t-tag__icon-close"><path fill="currentColor" d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z" fill-opacity="0.9"></path></svg></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+2</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :disabled 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content t-is-disabled  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-is-disabled t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-is-disabled t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-is-disabled t-select-input" style="display: none;"><input disabled="disabled" type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :empty string 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">no data</div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :filterable 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder" style="display: none;"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :loading 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium" style="display: none;">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :loadingText 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">data loading</p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :max 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :minCollapsedNum 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+-1</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :multiple 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :placeholder 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder">please select address</span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input placeholder="please select address" type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :popupProps 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :size 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="large">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-l"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-l t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-l t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: large;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-size-l t-select-right-icon t-select-right-icon__clear" style="display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :treeProps 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list">
                <div data-value="guangdong" data-level="0" class="t-tree__item t-tree__item--visible" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-caret-right-small"><path fill="currentColor" d="M6 5v6l4.5-3L6 5z" fill-opacity="0.9"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广东省</span></span></div>
                <div data-value="jiangsu" data-level="0" class="t-tree__item t-tree__item--visible" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-caret-right-small"><path fill="currentColor" d="M6 5v6l4.5-3L6 5z" fill-opacity="0.9"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">江苏省</span></span></div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :value 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list">
                <div data-value="guangdong" data-level="0" class="t-tree__item t-tree__item--visible" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-caret-right-small"><path fill="currentColor" d="M6 5v6l4.5-3L6 5z" fill-opacity="0.9"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广东省</span></span></div>
                <div data-value="jiangsu" data-level="0" class="t-tree__item t-tree__item--visible" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-caret-right-small"><path fill="currentColor" d="M6 5v6l4.5-3L6 5z" fill-opacity="0.9"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">江苏省</span></span></div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m t-select-selected"><span class="t-select-placeholder" style="display: none;"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span><span title="shenzhen" class="t-select-selectedSingle">shenzhen</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input placeholder="shenzhen" type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect :props :valueType 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list">
                <div data-value="guangdong" data-level="0" class="t-tree__item t-tree__item--visible" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-caret-right-small"><path fill="currentColor" d="M6 5v6l4.5-3L6 5z" fill-opacity="0.9"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">广东省</span></span></div>
                <div data-value="jiangsu" data-level="0" class="t-tree__item t-tree__item--visible" style="--level: 0;"><span trigger="expand" ignore="active" class="t-tree__icon t-folder-icon t-tree__icon--default"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-caret-right-small"><path fill="currentColor" d="M6 5v6l4.5-3L6 5z" fill-opacity="0.9"></path></svg></span><span class="t-tree__label t-tree__label--strictly"><span style="position: relative;">江苏省</span></span></div>
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m t-select-selected"><span class="t-select-placeholder" style="display: none;"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span><span title="[object Object]" class="t-select-selectedSingle">[object Object]</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input placeholder="[object Object]" type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <collapsedItems> 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <empty> 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div>no data</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <loadingText> 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips">
            <div>data loading</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium" style="display: none;">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect <slot> <prefixIcon> 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m t-has-prefix"><span class="t-select-left-icon"><div><i>icon</i></div></span><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect function :collapsedItems 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect function :empty 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div>no data</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect function :loadingText 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips">
            <div>data loading</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium" style="display: none;">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m"><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect function :prefixIcon 1`] = `
<div>
  <div class="t-popup-reference t-select-popup-reference">
    <transition-stub name="t-popup_animation" appear="true">
      <div role="tooltip" aria-hidden="true" class="t-popup" style="display: none;">
        <div class="t-popup-content  t-select-dropdown narrow-scrollbar">
          <div>
            <p class="t-select-loading-tips" style="display: none;">
            <div class="t-select-empty">加载中</div>
            </p>
            <div class="t-tree t-tree--hoverable t-tree--transition" size="medium">
              <transition-group-stub tag="div" name="t-tree-toggle" enteractiveclass="t-tree__item--enter-active" leaveactiveclass="t-tree__item--leave-active" class="t-tree__list"></transition-group-stub>
              <div class="t-tree__empty">
                <div class="t-select-empty">暂无数据</div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
    <div class="t-select t-size-m t-has-prefix"><span class="t-select-left-icon"></span><span class="t-select-placeholder"></span><span class="t-tag t-tag--default t-size-m t-tag--dark" style="display: none;">+0</span>
      <div class="t-input t-size-m t-select-input" style="display: none;"><input type="text" class="t-input__inner"></div><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select-right-icon" style="font-size: medium;">
        <path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path>
      </svg><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-close-circle-filled t-select-right-icon t-select-right-icon__clear" style="font-size: medium; display: none;">
        <path fill="currentColor" d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z" fill-opacity="0.9"></path>
      </svg>
      <div class="t-loading--center t-size-s t-loading t-select-right-icon t-select-active-icon" style="display: none;"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small">
          <foreignObject x="1" y="1" width="12" height="12">
            <div class="t-loading__gradient-conic"></div>
          </foreignObject>
        </svg></div>
    </div>
  </div>
</div>
`;
